--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -128,6 +128,8 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2600:3c0d::f03c:94ff:fe42:512f;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:aabe::1;
@@ -343,7 +345,6 @@ allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
-allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -494,6 +495,7 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
+allow 2a07:5900::253;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -665,21 +667,11 @@ allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
-allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
-allow 2a0b:f4c2:4::102;
-allow 2a0b:f4c2:4::103;
-allow 2a0b:f4c2:4::104;
 allow 2a0b:f4c2:4::105;
-allow 2a0b:f4c2:4::106;
-allow 2a0b:f4c2:4::107;
-allow 2a0b:f4c2:4::108;
-allow 2a0b:f4c2:4::109;
 allow 2a0b:f4c2:4::110;
 allow 2a0b:f4c2:4::96;
 allow 2a0b:f4c2:4::97;
-allow 2a0b:f4c2:4::98;
-allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
