--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -183,6 +183,7 @@ deny 171.25.193.79;
 deny 171.25.193.80;
 deny 172.104.214.41;
 deny 172.232.161.205;
+deny 172.233.16.74;
 deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.242;
@@ -297,7 +298,6 @@ deny 185.195.71.8;
 deny 185.195.71.9;
 deny 185.207.107.130;
 deny 185.207.107.216;
-deny 185.216.68.128;
 deny 185.220.100.240;
 deny 185.220.100.241;
 deny 185.220.100.242;
@@ -317,16 +317,8 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
-deny 185.220.101.100;
 deny 185.220.101.101;
-deny 185.220.101.102;
-deny 185.220.101.103;
-deny 185.220.101.104;
 deny 185.220.101.105;
-deny 185.220.101.106;
-deny 185.220.101.107;
-deny 185.220.101.108;
-deny 185.220.101.109;
 deny 185.220.101.11;
 deny 185.220.101.110;
 deny 185.220.101.12;
@@ -482,8 +474,6 @@ deny 185.220.101.9;
 deny 185.220.101.90;
 deny 185.220.101.96;
 deny 185.220.101.97;
-deny 185.220.101.98;
-deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -965,6 +955,8 @@ deny 23.137.253.110;
 deny 23.137.253.9;
 deny 23.152.24.77;
 deny 23.155.24.6;
+deny 23.155.8.104;
+deny 23.20.27.159;
 deny 23.236.122.62;
 deny 23.26.133.239;
 deny 23.94.211.25;
@@ -987,6 +979,8 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2600:3c0d::f03c:94ff:fe42:512f;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:aabe::1;
@@ -1203,7 +1197,6 @@ deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:d680::;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
-deny 2a00:1728:3f::c0cc:80;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
@@ -1354,6 +1347,7 @@ deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
+deny 2a07:5900::253;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -1525,21 +1519,11 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
-deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
-deny 2a0b:f4c2:4::102;
-deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
 deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
-deny 2a0b:f4c2:4::108;
-deny 2a0b:f4c2:4::109;
 deny 2a0b:f4c2:4::110;
 deny 2a0b:f4c2:4::96;
 deny 2a0b:f4c2:4::97;
-deny 2a0b:f4c2:4::98;
-deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1706,7 +1690,6 @@ deny 51.91.18.151;
 deny 5.196.73.12;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.201.86.166;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.26;
@@ -1834,7 +1817,6 @@ deny 89.234.157.254;
 deny 89.236.112.100;
 deny 89.36.231.153;
 deny 89.36.231.209;
-deny 89.36.231.210;
 deny 89.58.18.210;
 deny 89.58.26.216;
 deny 89.58.41.156;
@@ -1855,6 +1837,7 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.57;
+deny 91.217.219.253;
 deny 91.219.236.101;
 deny 91.219.237.56;
 deny 91.219.239.166;
