Update lists at 20240420-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -127,7 +126,6 @@ allow 137.63.71.51;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
-allow 141.98.11.62;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 143.42.110.237;
@@ -152,6 +150,7 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -342,7 +341,6 @@ allow 185.220.101.147;
 allow 185.220.101.148;
 allow 185.220.101.149;
 allow 185.220.101.15;
-allow 185.220.101.150;
 allow 185.220.101.151;
 allow 185.220.101.152;
 allow 185.220.101.153;
@@ -797,6 +795,7 @@ allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
+allow 202.61.226.98;
 allow 202.61.252.121;
 allow 202.69.76.36;
 allow 204.137.14.104;
@@ -1236,6 +1235,7 @@ allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:55:efb::1003;
 allow 2a03:4000:55:efb::a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
+allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -1385,7 +1385,6 @@ allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
 allow 2a0b:f4c2:1::148;
 allow 2a0b:f4c2:1::149;
-allow 2a0b:f4c2:1::150;
 allow 2a0b:f4c2:1::151;
 allow 2a0b:f4c2:1::152;
 allow 2a0b:f4c2:1::153;
@@ -1562,7 +1561,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.209.106.69;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1702,6 +1700,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.164.2.138;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1772,6 +1771,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.247.165.51;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
