--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -393,6 +393,7 @@ deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:55:efb::1003;
 deny 2a03:4000:55:efb::a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
+deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 deny 2a03:4000:62:8:c855:23ff:fef6:50ee;
 deny 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -542,7 +543,6 @@ deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::148;
 deny 2a0b:f4c2:1::149;
-deny 2a0b:f4c2:1::150;
 deny 2a0b:f4c2:1::151;
 deny 2a0b:f4c2:1::152;
 deny 2a0b:f4c2:1::153;
