--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -7,7 +7,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -127,7 +126,6 @@ deny 137.63.71.51;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 141.239.149.94;
-deny 141.98.11.62;
 deny 142.44.234.69;
 deny 143.110.156.176;
 deny 143.42.110.237;
@@ -152,6 +150,7 @@ deny 152.89.233.169;
 deny 155.4.102.252;
 deny 156.146.63.143;
 deny 160.119.249.240;
+deny 161.35.129.51;
 deny 162.247.72.192;
 deny 162.247.72.199;
 deny 162.247.74.200;
@@ -342,7 +341,6 @@ deny 185.220.101.147;
 deny 185.220.101.148;
 deny 185.220.101.149;
 deny 185.220.101.15;
-deny 185.220.101.150;
 deny 185.220.101.151;
 deny 185.220.101.152;
 deny 185.220.101.153;
@@ -797,6 +795,7 @@ deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 202.182.99.129;
+deny 202.61.226.98;
 deny 202.61.252.121;
 deny 202.69.76.36;
 deny 204.137.14.104;
@@ -1236,6 +1235,7 @@ deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:55:efb::1003;
 deny 2a03:4000:55:efb::a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
+deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 deny 2a03:4000:62:8:c855:23ff:fef6:50ee;
 deny 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -1385,7 +1385,6 @@ deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::148;
 deny 2a0b:f4c2:1::149;
-deny 2a0b:f4c2:1::150;
 deny 2a0b:f4c2:1::151;
 deny 2a0b:f4c2:1::152;
 deny 2a0b:f4c2:1::153;
@@ -1562,7 +1561,6 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
-deny 3.209.106.69;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 37.1.201.144;
@@ -1702,6 +1700,7 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
+deny 54.164.2.138;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1772,6 +1771,7 @@ deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
+deny 84.247.165.51;
 deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
