--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -114,7 +115,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -126,6 +126,7 @@ allow 137.63.71.51;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
+allow 141.98.11.62;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 143.42.110.237;
@@ -150,15 +151,9 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
-allow 162.247.72.199;
-allow 162.247.74.200;
 allow 162.247.74.201;
-allow 162.247.74.202;
-allow 162.247.74.204;
 allow 162.247.74.206;
-allow 162.247.74.213;
 allow 162.247.74.216;
 allow 162.247.74.217;
 allow 162.247.74.27;
@@ -470,7 +465,6 @@ allow 185.220.103.5;
 allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
-allow 185.220.103.9;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
@@ -530,7 +524,6 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.232.33;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -789,11 +782,11 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+allow 201.137.0.209;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.61.252.121;
@@ -985,7 +978,6 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
-allow 2602:fef9:100:1100::199;
 allow 2603:3:610a:5050::;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1547,6 +1539,7 @@ allow 2a11:840:6:1b::b3a1:6b14;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
+allow 2a12:5940:1733::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
@@ -1700,8 +1693,8 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.164.2.138;
 allow 54.224.79.94;
+allow 54.235.132.100;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1799,6 +1792,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
+allow 89.208.106.13;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.153;
