--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,6 +7,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -114,7 +115,6 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
@@ -126,6 +126,7 @@ set_real_ip_from 137.63.71.51;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 141.239.149.94;
+set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
 set_real_ip_from 143.42.110.237;
@@ -150,15 +151,9 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 155.4.102.252;
 set_real_ip_from 156.146.63.143;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
-set_real_ip_from 162.247.72.199;
-set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
-set_real_ip_from 162.247.74.202;
-set_real_ip_from 162.247.74.204;
 set_real_ip_from 162.247.74.206;
-set_real_ip_from 162.247.74.213;
 set_real_ip_from 162.247.74.216;
 set_real_ip_from 162.247.74.217;
 set_real_ip_from 162.247.74.27;
@@ -470,7 +465,6 @@ set_real_ip_from 185.220.103.5;
 set_real_ip_from 185.220.103.6;
 set_real_ip_from 185.220.103.7;
 set_real_ip_from 185.220.103.8;
-set_real_ip_from 185.220.103.9;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
@@ -530,7 +524,6 @@ set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
-set_real_ip_from 189.147.232.33;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
@@ -789,11 +782,11 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+set_real_ip_from 201.137.0.209;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.61.252.121;
@@ -985,7 +978,6 @@ set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:95b7::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
-set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:3:610a:5050::;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -1547,6 +1539,7 @@ set_real_ip_from 2a11:840:6:1b::b3a1:6b14;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
+set_real_ip_from 2a12:5940:1733::2;
 set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:9101::2;
 set_real_ip_from 2a12:5940:b4db::2;
@@ -1700,8 +1693,8 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.164.2.138;
 set_real_ip_from 54.224.79.94;
+set_real_ip_from 54.235.132.100;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1799,6 +1792,7 @@ set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.85.140;
+set_real_ip_from 89.208.106.13;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.36.231.153;
