--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -75,6 +74,7 @@ allow 107.189.3.249;
 allow 107.189.4.12;
 allow 107.189.4.158;
 allow 107.189.4.209;
+allow 107.189.4.76;
 allow 107.189.5.121;
 allow 107.189.5.18;
 allow 107.189.5.19;
@@ -115,17 +115,20 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
 allow 130.193.15.186;
+allow 134.122.66.38;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 137.63.71.51;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
+allow 141.98.10.14;
 allow 141.98.11.62;
 allow 142.44.234.69;
 allow 143.110.156.176;
@@ -782,6 +785,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -938,6 +942,30 @@ allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.9;
 allow 23.152.24.77;
+allow 23.154.177.10;
+allow 23.154.177.11;
+allow 23.154.177.12;
+allow 23.154.177.13;
+allow 23.154.177.14;
+allow 23.154.177.15;
+allow 23.154.177.16;
+allow 23.154.177.17;
+allow 23.154.177.18;
+allow 23.154.177.19;
+allow 23.154.177.2;
+allow 23.154.177.20;
+allow 23.154.177.21;
+allow 23.154.177.22;
+allow 23.154.177.23;
+allow 23.154.177.24;
+allow 23.154.177.25;
+allow 23.154.177.3;
+allow 23.154.177.4;
+allow 23.154.177.5;
+allow 23.154.177.6;
+allow 23.154.177.7;
+allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
@@ -1508,7 +1536,6 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
@@ -1570,6 +1597,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.223.171.70;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1669,7 +1697,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1694,7 +1721,6 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
-allow 54.235.132.100;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1741,6 +1767,7 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 79.26.168.170;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1828,7 +1855,6 @@ allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
-allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
