--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,7 +7,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -75,6 +74,7 @@ set_real_ip_from 107.189.3.249;
 set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.158;
 set_real_ip_from 107.189.4.209;
+set_real_ip_from 107.189.4.76;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.18;
 set_real_ip_from 107.189.5.19;
@@ -115,17 +115,20 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.15.186;
+set_real_ip_from 134.122.66.38;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.63.71.51;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 141.239.149.94;
+set_real_ip_from 141.98.10.14;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
@@ -782,6 +785,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
@@ -938,6 +942,30 @@ set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.9;
 set_real_ip_from 23.152.24.77;
+set_real_ip_from 23.154.177.10;
+set_real_ip_from 23.154.177.11;
+set_real_ip_from 23.154.177.12;
+set_real_ip_from 23.154.177.13;
+set_real_ip_from 23.154.177.14;
+set_real_ip_from 23.154.177.15;
+set_real_ip_from 23.154.177.16;
+set_real_ip_from 23.154.177.17;
+set_real_ip_from 23.154.177.18;
+set_real_ip_from 23.154.177.19;
+set_real_ip_from 23.154.177.2;
+set_real_ip_from 23.154.177.20;
+set_real_ip_from 23.154.177.21;
+set_real_ip_from 23.154.177.22;
+set_real_ip_from 23.154.177.23;
+set_real_ip_from 23.154.177.24;
+set_real_ip_from 23.154.177.25;
+set_real_ip_from 23.154.177.3;
+set_real_ip_from 23.154.177.4;
+set_real_ip_from 23.154.177.5;
+set_real_ip_from 23.154.177.6;
+set_real_ip_from 23.154.177.7;
+set_real_ip_from 23.154.177.8;
+set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
@@ -1508,7 +1536,6 @@ set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
-set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
@@ -1570,6 +1597,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.223.171.70;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
@@ -1669,7 +1697,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1694,7 +1721,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 54.224.79.94;
-set_real_ip_from 54.235.132.100;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1741,6 +1767,7 @@ set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
+set_real_ip_from 79.26.168.170;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
@@ -1828,7 +1855,6 @@ set_real_ip_from 92.205.129.119;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.12.112;
-set_real_ip_from 93.90.74.31;
 set_real_ip_from 93.95.225.141;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.228.205;
