--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -216,7 +216,6 @@ allow 179.43.159.197;
 allow 179.43.159.198;
 allow 179.43.159.199;
 allow 179.43.159.200;
-allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.167.205;
 allow 179.43.182.232;
@@ -527,6 +526,7 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 189.147.8.133;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -790,7 +790,6 @@ allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-allow 201.137.0.209;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.61.252.121;
@@ -1324,7 +1323,6 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
-allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
@@ -1536,8 +1534,8 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
-allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
@@ -1581,6 +1579,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.203.7.164;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1597,7 +1596,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.223.171.70;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1697,6 +1695,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1748,7 +1747,6 @@ allow 72.167.47.69;
 allow 72.211.49.235;
 allow 74.207.248.172;
 allow 74.82.47.194;
-allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.221.159.184;
 allow 77.221.159.189;
@@ -1784,8 +1782,6 @@ allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
 allow 82.68.49.227;
-allow 83.217.9.73;
-allow 83.26.9.159;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -1855,6 +1851,7 @@ allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
+allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
@@ -1898,7 +1895,6 @@ allow 95.143.193.125;
 allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
-allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
 allow 96.66.15.152;
