--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -461,7 +461,6 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
-allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
@@ -673,8 +672,8 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
-allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
