--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -204,6 +204,7 @@ set_real_ip_from 2605:6400:30:f307:ba73:e934:5195:accd;
 set_real_ip_from 2605:6400:30:f307:c2bf:d371:75a9:31e6;
 set_real_ip_from 2605:6400:30:f307:ff42:3928:c777:8563;
 set_real_ip_from 2605:6400:30:f32b:7417:ea33:425b:9732;
+set_real_ip_from 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 set_real_ip_from 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
 set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
