--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -116,6 +117,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
 allow 118.163.74.160;
+allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -130,6 +132,7 @@ allow 139.99.172.11;
 allow 141.239.149.94;
 allow 141.98.10.14;
 allow 141.98.11.62;
+allow 142.171.211.123;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 143.42.110.237;
@@ -151,7 +154,6 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
-allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -297,6 +299,7 @@ allow 185.195.71.8;
 allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
+allow 185.216.68.128;
 allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
@@ -789,7 +792,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -804,7 +806,6 @@ allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
-allow 204.236.242.236;
 allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
@@ -1211,6 +1212,7 @@ allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
+allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -1310,6 +1312,7 @@ allow 2a03:e600:100::70;
 allow 2a03:e600:100::71;
 allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
+allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
@@ -1702,7 +1705,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1720,6 +1722,7 @@ allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
+allow 5.255.98.198;
 allow 5.255.98.23;
 allow 5.255.99.124;
 allow 5.255.99.147;
@@ -1727,6 +1730,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.210.106.97;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1740,7 +1744,9 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.61.51.143;
 allow 57.129.20.162;
+allow 5.79.66.19;
 allow 62.133.45.2;
+allow 62.171.137.169;
 allow 62.182.83.179;
 allow 64.227.115.78;
 allow 64.5.123.66;
@@ -1855,6 +1861,7 @@ allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
+allow 92.119.126.163;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
@@ -1865,6 +1872,7 @@ allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
+allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
 allow 93.99.104.18;
@@ -1905,6 +1913,5 @@ allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
 allow 98.128.173.33;
