--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -300,7 +300,18 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
+deny 185.220.101.100;
+deny 185.220.101.101;
+deny 185.220.101.102;
+deny 185.220.101.103;
+deny 185.220.101.104;
+deny 185.220.101.105;
+deny 185.220.101.106;
+deny 185.220.101.107;
+deny 185.220.101.108;
+deny 185.220.101.109;
 deny 185.220.101.11;
+deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.128;
 deny 185.220.101.129;
@@ -451,6 +462,10 @@ deny 185.220.101.88;
 deny 185.220.101.89;
 deny 185.220.101.9;
 deny 185.220.101.90;
+deny 185.220.101.96;
+deny 185.220.101.97;
+deny 185.220.101.98;
+deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -943,6 +958,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.239;
 deny 23.94.211.25;
@@ -966,6 +982,7 @@ deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:aabe::1;
@@ -1030,7 +1047,6 @@ deny 2605:6400:30:f174:42:42::;
 deny 2605:6400:30:f174:42:42:42:0;
 deny 2605:6400:30:f174:42:42:42:42;
 deny 2605:6400:30:f174:4:3:2:1;
-deny 2605:6400:30:f174:cafe::;
 deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 deny 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 deny 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -1492,6 +1508,21 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1680,7 +1711,6 @@ deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.190;
-deny 54.156.12.0;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1777,7 +1807,6 @@ deny 89.147.111.87;
 deny 89.185.85.140;
 deny 89.234.157.254;
 deny 89.236.112.100;
-deny 89.36.231.153;
 deny 89.36.231.209;
 deny 89.58.18.210;
 deny 89.58.26.216;
