--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -127,6 +127,7 @@ deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:aabe::1;
@@ -191,7 +192,6 @@ deny 2605:6400:30:f174:42:42::;
 deny 2605:6400:30:f174:42:42:42:0;
 deny 2605:6400:30:f174:42:42:42:42;
 deny 2605:6400:30:f174:4:3:2:1;
-deny 2605:6400:30:f174:cafe::;
 deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 deny 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 deny 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -652,6 +652,21 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
