Update lists at 20240422-1501

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -192,6 +192,7 @@ deny 2605:6400:30:f174:42:42::;
 deny 2605:6400:30:f174:42:42:42:0;
 deny 2605:6400:30:f174:42:42:42:42;
 deny 2605:6400:30:f174:4:3:2:1;
+deny 2605:6400:30:f174:cafe::;
 deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 deny 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 deny 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -344,6 +345,7 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
+deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
@@ -408,7 +410,6 @@ deny 2a03:94e0:24d4::6;
 deny 2a03:94e0:24d4::7;
 deny 2a03:94e0:24d4::8;
 deny 2a03:94e0:24d4::9;
-deny 2a03:94e0:ffff:185:181:60:0:135;
 deny 2a03:94e0:ffff:185:181:61:0:115;
 deny 2a03:94e0:ffff:185:181:61:0:142;
 deny 2a03:94e0:ffff:185:181:61:0:18;
@@ -458,6 +459,7 @@ deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:6841::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
