--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -186,6 +187,7 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 178.162.209.56;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.164;
@@ -213,6 +215,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
+allow 18.214.118.240;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -257,7 +260,6 @@ allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
-allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
 allow 185.181.61.18;
@@ -639,8 +641,9 @@ allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
+allow 198.12.111.102;
 allow 198.144.178.163;
-allow 198.167.206.182;
+allow 198.167.206.196;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -1047,6 +1050,7 @@ allow 2605:6400:30:f174:42:42::;
 allow 2605:6400:30:f174:42:42:42:0;
 allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
+allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 allow 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -1200,6 +1204,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
@@ -1264,7 +1269,6 @@ allow 2a03:94e0:24d4::6;
 allow 2a03:94e0:24d4::7;
 allow 2a03:94e0:24d4::8;
 allow 2a03:94e0:24d4::9;
-allow 2a03:94e0:ffff:185:181:60:0:135;
 allow 2a03:94e0:ffff:185:181:61:0:115;
 allow 2a03:94e0:ffff:185:181:61:0:142;
 allow 2a03:94e0:ffff:185:181:61:0:18;
@@ -1314,6 +1318,7 @@ allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1642,6 +1647,7 @@ allow 45.79.50.161;
 allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.80.208.123;
+allow 45.80.208.225;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.219;
@@ -1781,6 +1787,7 @@ allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 84.54.51.61;
 allow 85.17.9.83;
 allow 85.204.116.211;
 allow 85.215.76.62;
@@ -1881,7 +1888,6 @@ allow 94.32.66.15;
 allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
-allow 95.143.193.125;
 allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
