--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,6 +7,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -186,6 +187,7 @@ set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 178.162.209.56;
+set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.164;
@@ -213,6 +215,7 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.214.118.240;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -257,7 +260,6 @@ set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
-set_real_ip_from 185.181.60.135;
 set_real_ip_from 185.181.61.115;
 set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.181.61.18;
@@ -639,8 +641,9 @@ set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.80.151.30;
 set_real_ip_from 195.88.74.206;
+set_real_ip_from 198.12.111.102;
 set_real_ip_from 198.144.178.163;
-set_real_ip_from 198.167.206.182;
+set_real_ip_from 198.167.206.196;
 set_real_ip_from 198.23.133.132;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
@@ -1047,6 +1050,7 @@ set_real_ip_from 2605:6400:30:f174:42:42::;
 set_real_ip_from 2605:6400:30:f174:42:42:42:0;
 set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
+set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 set_real_ip_from 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -1200,6 +1204,7 @@ set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
+set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
@@ -1264,7 +1269,6 @@ set_real_ip_from 2a03:94e0:24d4::6;
 set_real_ip_from 2a03:94e0:24d4::7;
 set_real_ip_from 2a03:94e0:24d4::8;
 set_real_ip_from 2a03:94e0:24d4::9;
-set_real_ip_from 2a03:94e0:ffff:185:181:60:0:135;
 set_real_ip_from 2a03:94e0:ffff:185:181:61:0:115;
 set_real_ip_from 2a03:94e0:ffff:185:181:61:0:142;
 set_real_ip_from 2a03:94e0:ffff:185:181:61:0:18;
@@ -1314,6 +1318,7 @@ set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
 set_real_ip_from 2a05:b0c7:6841::1;
+set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b6c::1;
@@ -1642,6 +1647,7 @@ set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.208.123;
+set_real_ip_from 45.80.208.225;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.9.148.219;
@@ -1781,6 +1787,7 @@ set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
+set_real_ip_from 84.54.51.61;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.211;
 set_real_ip_from 85.215.76.62;
@@ -1881,7 +1888,6 @@ set_real_ip_from 94.32.66.15;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
-set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
