Update lists at 20240423-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -89,7 +90,6 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
-allow 107.23.222.29;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -632,7 +632,6 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
-allow 194.180.188.174;
 allow 194.26.192.64;
 allow 194.26.192.77;
 allow 195.160.220.104;
@@ -789,7 +788,6 @@ allow 2001:910:1400:107::2;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
-allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
 allow 202.61.226.98;
@@ -920,7 +918,6 @@ allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
-allow 212.21.66.6;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.52.76;
@@ -934,7 +931,6 @@ allow 217.12.215.167;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
-allow 23.137.248.139;
 allow 23.137.248.69;
 allow 23.137.249.8;
 allow 23.137.250.34;
@@ -985,7 +981,7 @@ allow 2.58.56.90;
 allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
-allow 2600:3c00:e000:4ee::2;
+allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
@@ -996,7 +992,6 @@ allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:759::1;
-allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
@@ -1234,6 +1229,7 @@ allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
@@ -1775,7 +1771,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.220.130;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
