--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -117,11 +117,10 @@ allow 2001:910:1400:107::2;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
-allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
-allow 2600:3c00:e000:4ee::2;
+allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
@@ -132,7 +131,6 @@ allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:759::1;
-allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
@@ -369,6 +367,7 @@ allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
