--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,6 +7,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -89,7 +90,6 @@ set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
-set_real_ip_from 107.23.222.29;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
@@ -632,7 +632,6 @@ set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
-set_real_ip_from 194.180.188.174;
 set_real_ip_from 194.26.192.64;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 195.160.220.104;
@@ -789,7 +788,6 @@ set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
-set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
@@ -920,7 +918,6 @@ set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
-set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 212.95.52.76;
@@ -934,7 +931,6 @@ set_real_ip_from 217.12.215.167;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 23.137.248.100;
-set_real_ip_from 23.137.248.139;
 set_real_ip_from 23.137.248.69;
 set_real_ip_from 23.137.249.8;
 set_real_ip_from 23.137.250.34;
@@ -985,7 +981,7 @@ set_real_ip_from 2.58.56.90;
 set_real_ip_from 2.58.95.31;
 set_real_ip_from 2.58.95.35;
 set_real_ip_from 2.58.95.38;
-set_real_ip_from 2600:3c00:e000:4ee::2;
+set_real_ip_from 2600:3c00:e000:4ee::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::1;
@@ -996,7 +992,6 @@ set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:11:aabe::1;
 set_real_ip_from 2602:fc24:12:759::1;
-set_real_ip_from 2602:fc24:12:77c0::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
@@ -1234,6 +1229,7 @@ set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
+set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c207:3002:8283::1;
@@ -1775,7 +1771,6 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
-set_real_ip_from 79.102.220.130;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
