--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -7,7 +7,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -145,6 +144,7 @@ deny 149.56.44.47;
 deny 151.80.148.159;
 deny 152.89.233.169;
 deny 160.119.249.240;
+deny 161.35.129.51;
 deny 162.247.72.192;
 deny 162.247.72.199;
 deny 162.247.74.200;
@@ -400,16 +400,10 @@ deny 185.220.101.30;
 deny 185.220.101.31;
 deny 185.220.101.32;
 deny 185.220.101.33;
-deny 185.220.101.34;
-deny 185.220.101.35;
-deny 185.220.101.36;
 deny 185.220.101.37;
-deny 185.220.101.38;
 deny 185.220.101.39;
 deny 185.220.101.4;
-deny 185.220.101.40;
 deny 185.220.101.41;
-deny 185.220.101.42;
 deny 185.220.101.43;
 deny 185.220.101.44;
 deny 185.220.101.45;
@@ -421,18 +415,9 @@ deny 185.220.101.5;
 deny 185.220.101.50;
 deny 185.220.101.51;
 deny 185.220.101.52;
-deny 185.220.101.53;
-deny 185.220.101.54;
-deny 185.220.101.55;
-deny 185.220.101.56;
-deny 185.220.101.57;
 deny 185.220.101.58;
-deny 185.220.101.59;
 deny 185.220.101.6;
-deny 185.220.101.60;
-deny 185.220.101.61;
 deny 185.220.101.62;
-deny 185.220.101.63;
 deny 185.220.101.64;
 deny 185.220.101.65;
 deny 185.220.101.66;
@@ -478,13 +463,10 @@ deny 185.225.69.232;
 deny 185.227.134.106;
 deny 185.227.68.78;
 deny 185.233.100.23;
-deny 185.234.131.80;
 deny 185.235.146.29;
 deny 185.241.208.115;
 deny 185.241.208.196;
-deny 185.241.208.202;
 deny 185.241.208.204;
-deny 185.241.208.206;
 deny 185.241.208.212;
 deny 185.241.208.232;
 deny 185.241.208.236;
@@ -527,6 +509,7 @@ deny 185.86.148.90;
 deny 188.165.200.97;
 deny 188.172.229.15;
 deny 188.214.104.21;
+deny 188.244.106.81;
 deny 188.68.41.191;
 deny 188.68.49.235;
 deny 188.68.52.231;
@@ -598,6 +581,7 @@ deny 192.42.116.28;
 deny 192.99.168.180;
 deny 193.105.134.150;
 deny 193.105.134.155;
+deny 193.148.18.122;
 deny 193.168.141.245;
 deny 193.189.100.194;
 deny 193.189.100.195;
@@ -647,6 +631,7 @@ deny 198.251.84.237;
 deny 198.251.88.18;
 deny 198.251.89.96;
 deny 198.46.166.157;
+deny 198.46.215.32;
 deny 198.50.128.237;
 deny 198.58.107.53;
 deny 198.96.155.3;
@@ -794,7 +779,6 @@ deny 204.137.14.105;
 deny 204.137.14.106;
 deny 204.137.14.92;
 deny 204.194.29.4;
-deny 204.8.156.142;
 deny 204.85.191.7;
 deny 204.85.191.8;
 deny 204.85.191.9;
@@ -1227,7 +1211,6 @@ deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
-deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
@@ -1315,7 +1298,6 @@ deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:120:a13d::1;
-deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
@@ -1456,16 +1438,10 @@ deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
 deny 2a0b:f4c2:2::32;
 deny 2a0b:f4c2:2::33;
-deny 2a0b:f4c2:2::34;
-deny 2a0b:f4c2:2::35;
-deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
-deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
-deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
-deny 2a0b:f4c2:2::42;
 deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
@@ -1477,18 +1453,9 @@ deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
-deny 2a0b:f4c2:2::53;
-deny 2a0b:f4c2:2::54;
-deny 2a0b:f4c2:2::55;
-deny 2a0b:f4c2:2::56;
-deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
-deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
-deny 2a0b:f4c2:2::60;
-deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
-deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
@@ -1571,6 +1538,7 @@ deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
+deny 2a10:1fc0:7::d6ca:a017;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1592,6 +1560,7 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
+deny 34.194.178.4;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 37.1.201.144;
@@ -1624,12 +1593,10 @@ deny 45.138.16.249;
 deny 45.138.16.42;
 deny 45.138.16.76;
 deny 45.141.215.110;
-deny 45.141.215.111;
 deny 45.141.215.114;
 deny 45.141.215.167;
 deny 45.141.215.169;
 deny 45.141.215.170;
-deny 45.141.215.21;
 deny 45.141.215.56;
 deny 45.141.215.61;
 deny 45.141.215.62;
@@ -1700,7 +1667,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.0.213.72;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.26;
@@ -1714,7 +1680,6 @@ deny 5.255.115.42;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.124.150;
-deny 5.255.125.196;
 deny 5.255.125.41;
 deny 5.255.127.222;
 deny 5.255.97.221;
@@ -1745,6 +1710,9 @@ deny 62.182.83.179;
 deny 62.63.244.28;
 deny 64.227.115.78;
 deny 64.5.123.66;
+deny 64.7.198.199;
+deny 64.7.199.234;
+deny 65.38.121.165;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 67.219.109.141;
@@ -1753,6 +1721,7 @@ deny 71.19.144.106;
 deny 72.14.179.10;
 deny 72.167.47.69;
 deny 72.211.49.235;
+deny 72.5.43.211;
 deny 74.82.47.194;
 deny 77.105.146.42;
 deny 77.220.196.253;
@@ -1809,6 +1778,7 @@ deny 85.17.9.83;
 deny 85.204.116.211;
 deny 85.204.116.88;
 deny 85.215.76.62;
+deny 85.239.60.173;
 deny 86.104.194.13;
 deny 87.118.115.44;
 deny 87.118.116.103;
@@ -1829,7 +1799,6 @@ deny 89.147.110.214;
 deny 89.147.110.82;
 deny 89.147.111.124;
 deny 89.147.111.87;
-deny 89.169.53.56;
 deny 89.185.85.140;
 deny 89.234.157.254;
 deny 89.236.112.100;
@@ -1902,7 +1871,6 @@ deny 94.177.106.59;
 deny 94.228.163.25;
 deny 94.228.169.70;
 deny 94.230.208.147;
-deny 94.230.208.148;
 deny 94.32.66.15;
 deny 94.75.225.81;
 deny 95.128.43.164;
