--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -366,7 +366,6 @@ set_real_ip_from 2a02:13f0:8100:6:6bc:499d:b353:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
-set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 set_real_ip_from 2a02:898:218::1;
@@ -454,7 +453,6 @@ set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:120:a13d::1;
-set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
@@ -595,16 +593,10 @@ set_real_ip_from 2a0b:f4c2::22;
 set_real_ip_from 2a0b:f4c2::23;
 set_real_ip_from 2a0b:f4c2:2::32;
 set_real_ip_from 2a0b:f4c2:2::33;
-set_real_ip_from 2a0b:f4c2:2::34;
-set_real_ip_from 2a0b:f4c2:2::35;
-set_real_ip_from 2a0b:f4c2:2::36;
 set_real_ip_from 2a0b:f4c2:2::37;
-set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
-set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
-set_real_ip_from 2a0b:f4c2:2::42;
 set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
@@ -616,18 +608,9 @@ set_real_ip_from 2a0b:f4c2::25;
 set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
 set_real_ip_from 2a0b:f4c2:2::52;
-set_real_ip_from 2a0b:f4c2:2::53;
-set_real_ip_from 2a0b:f4c2:2::54;
-set_real_ip_from 2a0b:f4c2:2::55;
-set_real_ip_from 2a0b:f4c2:2::56;
-set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
-set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
-set_real_ip_from 2a0b:f4c2:2::60;
-set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
-set_real_ip_from 2a0b:f4c2:2::63;
 set_real_ip_from 2a0b:f4c2::27;
 set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
@@ -710,6 +693,7 @@ set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:9491:941d:caf5:50e7;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
+set_real_ip_from 2a10:1fc0:7::d6ca:a017;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
