Update lists at 20240424-0000

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -350,6 +350,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
@@ -463,6 +464,7 @@ deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6841::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
