--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -108,6 +109,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -198,6 +200,7 @@ allow 178.175.142.26;
 allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
+allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
@@ -788,8 +791,10 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
+allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
 allow 202.61.226.98;
@@ -921,6 +926,7 @@ allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
+allow 212.21.66.6;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.52.76;
@@ -928,7 +934,6 @@ allow 213.156.142.30;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
-allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.215.167;
 allow 217.12.221.131;
@@ -986,7 +991,7 @@ allow 2.58.56.90;
 allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
-allow 2600:3c00:e000:4ee::1;
+allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
@@ -1780,7 +1785,6 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
-allow 79.26.168.170;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
