Update lists at 20240426-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -148,6 +148,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -652,7 +653,6 @@ allow 195.176.3.24;
 allow 195.88.74.206;
 allow 198.12.111.102;
 allow 198.144.178.163;
-allow 198.167.206.144;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -915,6 +915,7 @@ allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.116.34;
+allow 205.185.117.149;
 allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
@@ -941,7 +942,6 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
-allow 23.137.249.8;
 allow 23.137.250.34;
 allow 23.137.253.108;
 allow 23.137.253.109;
@@ -973,7 +973,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.133.162;
@@ -998,10 +997,8 @@ allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
-allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
@@ -1032,6 +1029,7 @@ allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:20:104e::2;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
+allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:ff9::1;
@@ -1239,9 +1237,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6f8:2020:206:b::144;
 allow 2a02:7aa0:1619::ba45:e7f2;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
@@ -1807,7 +1803,6 @@ allow 82.197.182.161;
 allow 82.221.131.5;
 allow 82.221.131.71;
 allow 82.221.139.190;
-allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.26.9.159;
 allow 83.96.213.63;
