--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -127,10 +127,8 @@ allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
-allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
@@ -161,6 +159,7 @@ allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:20:104e::2;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
+allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:ff9::1;
@@ -367,9 +366,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6f8:2020:206:b::144;
 allow 2a02:7aa0:1619::ba45:e7f2;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
